[gd_scene load_steps=11 format=2]

[ext_resource path="res://assests/main_background/colorful/sky.png" type="Texture" id=1]
[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/floor.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/red_button.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/blue_button.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/endless_game.gd" type="Script" id=6]
[ext_resource path="res://scenes/green_button.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/UI.tscn" type="PackedScene" id=8]
[ext_resource path="res://audio/game_soundEndless.mp3" type="AudioStream" id=9]
[ext_resource path="res://audio/pressed.wav" type="AudioStream" id=10]

[node name="endless_game" type="Node2D"]
script = ExtResource( 6 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 202.992, 359.469 )
scale = Vector2( 1.64006, 2.06018 )
texture = ExtResource( 1 )

[node name="player" parent="." instance=ExtResource( 2 )]
position = Vector2( 202, 571 )

[node name="floor" parent="." instance=ExtResource( 3 )]
position = Vector2( 250, 618 )
scale = Vector2( 3.24, 0.796124 )

[node name="floor2" parent="." instance=ExtResource( 3 )]
position = Vector2( 427, 308 )
rotation = 1.56671
scale = Vector2( 4.64161, 1 )

[node name="floor3" parent="." instance=ExtResource( 3 )]
position = Vector2( -30, 304 )
rotation = 1.56671
scale = Vector2( 4.44177, 1 )

[node name="collect_timer" type="Timer" parent="."]
autostart = true

[node name="enemy_timer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="collect_speed_timer" type="Timer" parent="."]
wait_time = 9.0

[node name="colors" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="red_button" parent="." instance=ExtResource( 4 )]
position = Vector2( 45, 670 )

[node name="blue_button" parent="." instance=ExtResource( 5 )]
position = Vector2( 210, 670 )

[node name="green_button" parent="." instance=ExtResource( 7 )]
position = Vector2( 360, 670 )

[node name="UI" parent="." instance=ExtResource( 8 )]

[node name="game_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = 6.0
autoplay = true

[node name="pressed" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="power_up_timer" type="Timer" parent="."]
wait_time = 25.0
autostart = true

[node name="new_enemy" type="Timer" parent="."]
wait_time = 26.0

[connection signal="timeout" from="collect_timer" to="." method="_on_collect_timer_timeout"]
[connection signal="timeout" from="enemy_timer" to="." method="_on_enemy_timer_timeout"]
[connection signal="timeout" from="collect_speed_timer" to="." method="_on_collect_speed_timer_timeout"]
[connection signal="timeout" from="power_up_timer" to="." method="_on_power_up_timer_timeout"]
[connection signal="timeout" from="new_enemy" to="." method="_on_new_enemy_timeout"]
